# music_credits_scraper

./: .cache  .git-blame-ignore-revs  .gitignore  Lancer_Venv_Admin.bat  Lancer_Venv_Admin.ps1  README.md  REFONTE.md  WIP.md  alembic.ini  initialize-certifications-script.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e10_backfill_legacy_observations.py  e11_backfill_musical_key_orphans.py  e12_drop_audio_columns.py  e1_initial_schema_schema_initial_reflet_legacy_user_.py  e4_observations_table_observations_plus_backfill.py  e5_drop_combined_bpm_observations.py  e8_ytm_channel_source.py  e9_media_images.py
archive/: reccobeats_api_backup.py  songbpm_scraper.py
data/disabled_tracks/: josman_disabled.json
docs/: maintenance-sources.md
scripts/: bpmfinder_diagnose.py  bpmfinder_login.py  bubble_feat.py  bubble_prod.py  capture_fixtures.py  check_database_status.py  check_duplicates.py  check_observations.py  check_sources_health.py  merge_duplicates.py  migrate_snep_to_csv.py  restore_from_backup.py  run_brma.ps1  sonoteller_worklist.py  warm_cf_profile.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  acousticbrainz_api.py  async_http.py  deezer_api.py  discogs_api.py  genius_api.py  getsongbpm_api.py  lastfm_api.py  lrclib_api.py  musixmatch_api.py  reccobeats_api.py  snep_certifications.py  spotify_api.py  ytmusic_api.py
src/concurrency/: __init__.py  async_loop.py  rate_limiter.py  serial_worker.py
src/dataviz/: __init__.py  bubble_feat.py  bubble_prod.py  bubble_svg.py  collab_graph.py  debug_preview.py  geometry.py
src/enrichment/: __init__.py  audio_normalize.py  base.py  cert_source.py  context.py  observation.py  reconcile.py
src/gui/: __init__.py  certification_update_gui.py  formatters.py  helpers.py  main_window.py
src/models/: __init__.py  artist.py  certification.py  track.py
src/persistence/: __init__.py  binding.py  bootstrap.py  legacy_migrations.py  schema.py
src/scrapers/: __init__.py  bpmfinder_scraper.py  bpmfinder_scraper_async.py  cdp_chrome.py  crawl4ai_scraper_base.py  genius_scraper.py  genius_scraper_original.py  genius_scraper_v2.py  genius_scraper_v3.py  kworb_scraper.py  playwright_manager.py  rapedia_scraper.py  riaa_scraper_v2.py  scraper_brma.py  scraper_riaa.py  songbpm_scraper.py  songbpm_scraper_async.py  songbpm_scraper_v2.py  sonoteller_scraper.py  spotify_id_scraper.py  spotify_id_scraper_async.py  spotify_id_scraper_v2.py  ultratop_fetch.py
src/scripts/: init_certifications.py  scraper_brma.py  scraper_riaa.py  search_artist_riaa.py  update_brma.py  update_riaa.py  update_snep.py
src/utils/: __init__.py  artist_repository.py  bpm_resolver.py  bpm_vote.py  brma_validator.py  cert_matcher.py  cert_normalize.py  certification_enricher.py  certification_manager.py  credit_normalize.py  data_enricher.py  data_manager.py  dates.py  db.py  (+29 more)
tests/: conftest.py  test_alembic_baseline.py  test_alembic_bootstrap.py  test_api_async_twins.py  test_async_http.py  test_async_loop.py  test_audio_normalize.py  test_bpm_vote.py  test_brma_fixtures.py  test_brma_raw.py  test_bubble_feat.py  test_bubble_geometry.py  test_bubble_graph.py  test_bubble_svg.py  test_cert_audit.py  test_cert_matcher.py  test_cert_normalize.py  test_cert_source.py  test_certification_enricher.py  test_config.py  test_credit_normalize.py  test_data_manager_behavior.py  test_data_manager_behavior_e0.py  test_dates.py  test_enrich_track_orchestration.py  test_enrich_track_orchestration_async.py  test_enrichment_bpmfinder.py  test_enrichment_deezer.py  test_enrichment_discogs.py  test_enrichment_getsongbpm.py  test_enrichment_lifecycle.py  test_enrichment_reccobeats.py  test_enrichment_songbpm.py  test_enrichment_spotify_id.py  test_enrichment_streams.py  test_genius_fixtures.py  test_getsongbpm_fixtures.py  test_image_downloader.py  test_kworb_fixtures.py  test_kworb_parsing.py  (+37 more)
(+54 files in other folders)
